fixing the image overflow

--- a/index.css
+++ b/index.css
@@ -33,19 +33,19 @@ body {
 .pic-ctn {
   display: flex;
   justify-content: center;
-  position: relative;
-  height: 93vh;
+
+  height: 100vh;
 }
 
 .pic-ctn > img {
   width: 100%;
-  height: 93vh;
-  object-fit: fill;
-
+  height: 100%;
+  object-fit: cover;
   position: absolute;
   top: 0;
   opacity: 0;
   animation: display 20s infinite;
+  z-index: -1;
 }
 
 img:nth-child(2) {
@@ -66,13 +66,11 @@ ul {
   display: flex;
   align-items: center;
   min-height: 7vh;
-  position: sticky;
-  z-index: 99;
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   background-color: black;
+  z-index: 99;
 }
 
 li {
@@ -89,11 +87,10 @@ li a {
 /* partie titre */
 
 .title {
-  display: flex;
-  flex-wrap: wrap;
   position: absolute;
-  padding: 15% 2% 0 2%;
-  bottom: 0%;
+  width: 100%;
+  padding: 35% 4% 0 4%;
+  bottom: 0vh;
   height: 45vh;
   background-image: linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0));
 }
@@ -101,13 +98,9 @@ li a {
   font-size: 4rem;
   font-weight: 400;
   color: white;
-  margin: 12vh 0 0 2vh;
-  /* margin: 30vh 0; */
 }
 
 .title > p {
-  margin: 0 0 3vh 2vh;
-
   font-size: 2rem;
   color: white;
   font-weight: 200;
